--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -94,13 +94,20 @@
         "fail": "Erro ao importar arquivo"
     },
     "global": {
+        "companyName": "Electroson Brasil",
         "home": "Inicio",
         "cancel": "Cancelar",
         "save": "Salvar",
         "confirm": "Confirmar",
+        "NCs": "Não Conformidades",
         "yes": "Sim",
         "no": "Não",
         "back": "Voltar",
+        "revision": "revisão",
+        "close": "Fechar",
+        "importData": "Importar Dados",
+        "dashboards": "Dashboards",
+        "logout": "Sair",
         "type": "Digite",
         "next" : "Avançar",
         "finish": "Concluir",
@@ -141,6 +148,8 @@
             "name": "Nome",
             "email": "E-mail",
             "partner": "Parceiro",
+            "title": "Emitir Notificações",
+            "subtitle": "Visualize os contatos a serem notificados acerca do andamento desta NC. Por padrão, são adicionados contatos já incluidos nos passos anteriores.",
             "addTitle": "Adicionar outros contatos",
             "addSubTitle": "Adicione contatos de partes interessadas que serão notificadas acerca do andamento desta NC",
             "search": "Busque por nome ou e-mail...",
@@ -337,6 +346,7 @@
         "viewNC": "Informações da NC",
         "proposal": "Proposta de Solução",
         "costs": "Custos Incorridos",
+        "backToNC": "Voltar Para Nc",
         "sgqEval": "Avaliação SGQ",
         "closing": "Fechamento",
         "headerTitle": "Não Conformidade",
@@ -424,7 +434,72 @@
             "risks": "Riscos e Oportunidades",
             "changes": "Mudanças",
             "deadline": "Data de Fechamento"
+        },
+        "ncView": {
+            "title": "Informações da NC",
+            "subtitle": "Visualize os detalhes cadastrados nesta NC.",
+            "editBtn": "Editar NC",
+            "description": "Descrição da Não Conformidade"
         }
+    },
+    "createProp": {
+        "success": "Proposta de solução criada com sucesso.",
+        "success2": "Proposta de solução criada com sucesso.",
+        "fail1": "Houve um erro ao criar proposta de solução.",
+        "fail2": "Não conformidade não encontrada.",
+        "fail3": "Houve um erro ao salvar passo proposta de solução.",
+        "label1": "Diagrama de Ishikawa e 5 Porquês",
+        "label2": "Plano de Ação e Emitir Notificação",
+        "label3": "Revisão",
+        "search": "Selecione ou busque...",
+        "step1": {
+            "subtitle": "Descreva o problema referente aos respectivos campos de acordo com o Diagrama de Causa e Efeito - Ishikawa.",
+            "descBtn": "Visualizar Descrição da NC",
+            "moreInfo": "Acrescente e detalhe abaixo outras informações pertinentes:",
+            "material": "Quando ocorre falta/excesso de insumos ou estes são de má qualidade.",
+            "materialCheck1": "Falta de Insumos",
+            "materialCheck2": "Excesso de Insumos",
+            "materialCheck3": "Matéria prima de má qualidade",
+            "measure": "Quando há erros, falta ou excesso de parâmetros de inspeção, não atingimento de metas ou outras informações de medição.",
+            "measureCheck1": "Falta de Parâmetros",
+            "measureCheck2": "Excesso de Parâmetros",
+            "measureCheck3": "Não atingimento de metas",
+            "method": "Quando há ausência de métodos formais ou estes são inadequados, incompletos, incorretos ou não foram divulgados adequadamente. Também se aplica quando: há falta de inspeção, ausência ou falha em sistemas automatizados, má gestão como um todo.",
+            "it": "IT - Instrução de Trabalho",
+            "search": "Busque...",
+            "pr": "PR - Procedimento",
+            "nr": "NR - Norma Regulamentadora",
+            "iso": "ISO - Norma NBR",
+            "labor": "Quando o colaborador desrespeita procedimentos, desconhece a maneira correta de executar o trabalho (falta de treinamento), ou o faz de maneira inadequada (com pressa, imprudência, etc) ou descompromissada (falta de responsabilidade, motivação, etc).",
+            "laborCheck": "Executar treinamento",
+            "ambient": "Quando o problema está relacionado a condições ambientais (poluição, temperatura, ruido, luminosidade, etc) ou a condições de infraestrutura (espaço físico, mobiliário, etc).",
+            "machine": "Quando há ausência, obsolescência, má regulagem, quebra ou outros problemas com os equipamentos, inclusive de informática. Se aplica também nas falhas de manuntenção corretiva ou preventiva destes equipamentos",
+            "machines": "Máquinas",
+            "equipments": "Equipamentos",
+            "effect": "Quando há ausência, obsolescência, má regulagem, quebra ou outros problemas com os equipamentos, inclusive de informática. Se aplica também nas falhas de manuntenção corretiva ou preventiva destes equipamentos.",
+            "back": "Retornar ao Diagrama",
+            "5why": "Descreva a possivel causa do problema utilizando o método dos 5 porquês.",
+            "backWhy": "Retornar aos Porquês",
+            "why": "Porquê",
+            "rootCause": "Esta é a Causa Raiz",
+            "firstWhy": "Escreva o primeiro porquê"
+        },
+        "step2": {
+            "status1": "Em execução",
+            "status2": "Atrasada",
+            "status3": "Cancelada",
+            "status4": "Concluida",
+            "delActionMsg": "Você tem certeza que quer excluir a ação",
+            "delActionTitle": "Excluir Ação",
+            "successDel": "Ação removida com sucesso",
+            "EditAction": "Editar ação",
+            "actionPlanTitle": "Plano de Ações",
+            "actionPlanSubtitle": "Descreva o cronograma de atividades de ações corretivas da proposição.",
+            "addAction": "Adicionar Ação",
+            "description": "Descrição da Ação"
+        },
+        "reviewTitle": "Análise da Não Conformidade",
+        "reviewSubtitle": "Revise ou altere os dados da análise da NC. Se tudo estiver OK, submeta a análise desta NC."
     }
 }
 
