--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -607,6 +607,7 @@
   },
   "sgq": {
     "number": "Número",
+    "success": "Avaliação salva com sucesso",
     "openingDate": "Data de Abertura",
     "closingDate": "Data de Fechamento",
     "checkEffectiveness": "Verificação de eficácia",
